# geom-2d

./: CMakeLists.txt  README.md
GH2_KODIERUNGSDOKUMENTATION_HTML/: _area_8h_source.html  _circle_8h_source.html  _drawable_8h_source.html  _line_8h_source.html  _my_polygon_8h_source.html  _point_8h_source.html  _rect_8h_source.html  _segment_8h_source.html  _shape_8h_source.html  _transformable_8h_source.html  _triangle_8h_source.html  class_area.html  class_circle-members.html  class_circle.html  class_drawable.html  class_line.html  class_my_polygon.html  class_point-members.html  class_point.html  class_rect.html  class_segment.html  class_shape.html  class_transformable.html  class_triangle-members.html  class_triangle.html  classes.html  files.html  functions.html  hierarchy.html  index.html  struct_node.html
GH2_KODIERUNGSDOKUMENTATION_HTML/search/: all_0.js  all_2.js  all_6.js  all_8.js  all_b.js  functions_0.js  functions_2.js  functions_6.js  functions_a.js  functions_b.js
GH2_SOURCE_NECZPÁL_ÁBEL_JQSU08/: Area.h  CMakeLists.txt  Circle.cpp  Circle.h  Drawable.cpp  Drawable.h  Line.cpp  Line.h  MyPolygon.cpp  MyPolygon.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Segment.cpp  Segment.h  Shape.h  Transformable.h  Triangle.cpp  Triangle.h  main.cpp
docs/: _area_8h_source.html  _circle_8h_source.html  _my_polygon_8h_source.html  _point_8h_source.html  class_area-members.html  class_line-members.html  class_line.html  class_my_polygon-members.html  class_point.html  class_rect-members.html  class_rect.html  class_segment-members.html  class_shape-members.html  class_transformable-members.html  functions_vars.html  struct_node.html
docs-de/html-docs/: _drawable_8h_source.html  _line_8h_source.html  _rect_8h_source.html  _segment_8h_source.html  _shape_8h_source.html  _transformable_8h_source.html  _triangle_8h_source.html  annotated.html  class_area.html  class_circle.html  class_drawable-members.html  class_drawable.html  class_my_polygon.html  class_segment.html  class_shape.html  class_transformable.html  class_triangle.html  dir_8105bba7d3676c078a1d0bffefce938f.html  files.html  functions_func.html  index.html  jquery.js  struct_node-members.html
docs-de/html-docs/search/: all_1.js  classes_5.js  classes_9.js  functions_1.js  functions_4.js
docs/search/: all_5.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_4.js  classes_8.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js
lib/inc/: MyPolygon.h  Point.h  Shape.h  Transformable.h  Triangle.h
lib/src/: Circle.cpp  Drawable.cpp  Line.cpp  MyPolygon.cpp  Point.cpp  Rect.cpp  Segment.cpp  Triangle.cpp
src/: Area.h  Circle.cpp  Drawable.cpp  Line.cpp  Line.h  Point.cpp  Rect.cpp  Rect.h  Segment.cpp  Segment.h  Triangle.cpp  main.cpp
test/: main.cpp
